fix openj9 issue